button export PDF separado

--- a/src/app/Ui/Modules/Carga_Inventario/Components/Modals/modal-carga-datos/modal-carga-datos.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Components/Modals/modal-carga-datos/modal-carga-datos.component.html
@@ -157,7 +157,7 @@
             <div class="containar_ver_detalle">
               <h4>Items cargados: <span> {{cantidadDatosExcel}}</span></h4>
 
-              <button [disabled]="!HayArchivo"  title="any" class="ver_detalle" aria-haspopup="dialog" aria-expanded="false" aria-controls="hs-stacked-overlays-2" data-hs-overlay="#hs-detalle-excel_preview" data-hs-overlay-options='{
+              <button type="button" [disabled]="!HayArchivo"  title="any" class="ver_detalle" aria-haspopup="dialog" aria-expanded="false" aria-controls="hs-stacked-overlays-2" data-hs-overlay="#hs-detalle-excel_preview" data-hs-overlay-options='{
                 "isClosePrev": false
               }'>
                 <img src="../../../../../../assets/svg/icon_ver.svg" alt="" />
