--- a/src/app/Ui/Modules/Carga_Inventario/Components/Tables/table-design-one/table-design-one.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Components/Tables/table-design-one/table-design-one.component.html
@@ -1,5 +1,5 @@
 <!-- Table Section -->
-<div class="max-w-[95rem] px-4 py-10 sm:px-6 lg:px-8 lg:py-4 mx-auto ">
+<div class="max-w-[100rem] px-4 py-10 sm:px-6 lg:px-8 lg:py-4 mx-auto ">
   <!-- Card -->
   <div class="flex flex-col">
     <div class="-m-1.5 overflow-x-auto">
@@ -101,16 +101,6 @@
                   <span
                     class="text-xs font-semibold uppercase tracking-wide text-gray-800 dark:text-neutral-200"
                   >
-                    Detalle
-                  </span>
-                </div>
-              </th>
-
-              <th scope="col" class="px-6 py-3 text-start">
-                <div class="flex items-center gap-x-2">
-                  <span
-                    class="text-xs font-semibold uppercase tracking-wide text-gray-800 dark:text-neutral-200"
-                  >
                     Estado
                   </span>
                 </div>
@@ -126,13 +116,23 @@
                 </div>
               </th>
 
+              <th scope="col" class="px-6 py-3 text-start">
+                <div class="flex items-center gap-x-2">
+                  <span
+                    class="text-xs font-semibold uppercase tracking-wide text-gray-800 dark:text-neutral-200"
+                  >
+                    Detalle
+                  </span>
+                </div>
+              </th>
+
               <th scope="col" class="px-6 py-3 text-end"></th>
             </tr>
           </thead>
 
           <tbody class="divide-y divide-gray-200 dark:divide-neutral-700">
 
-            @for (item of datosInventarioslista | paginate: { itemsPerPage: 20, currentPage: p }; track $index;) {
+            @for (item of datosInventarioslista | paginate: { itemsPerPage: 10, currentPage: p }; track $index;) {
               <tr>
                 <td class="size-px whitespace-nowrap">
                   <div class="ps-6 py-3">
@@ -173,25 +173,6 @@
                         >
                       </div>
                     </div>
-                  </div>
-                </td>
-                <td class="size-px whitespace-nowrap">
-                  <div class="px-6 py-3">
-                    <button
-                    (click)="ObtenerDetalleInventarios(item.rucempresa, item.idcarga)"
-                      title="none"
-                      type="button"
-                      aria-haspopup="dialog"
-                      aria-expanded="false"
-                      aria-controls="hs-detalles-inventario"
-                      data-hs-overlay="#hs-detalles-inventario"
-                      class="py-2 px-3 inline-flex items-center gap-x-2 text-xs rounded-lg border border-gray-200 bg-white text-gray-800 shadow-sm hover:bg-gray-50 focus:outline-none focus:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-white dark:hover:bg-neutral-800 dark:focus:bg-neutral-800"
-                    >
-                      <img
-                        src="../../../../../../assets/svg/icon_ver.svg"
-                        alt=""
-                      />
-                    </button>
                   </div>
                 </td>
                 <td class="size-px whitespace-nowrap">
@@ -263,6 +244,25 @@
                     <span class="text-sm text-gray-600 dark:text-neutral-400"
                       >{{item.fechacarga}}</span
                     >
+                  </div>
+                </td>
+                <td class="size-px whitespace-nowrap">
+                  <div class="px-6 py-3">
+                    <button
+                    (click)="ObtenerDetalleInventarios(item.rucempresa, item.idcarga)"
+                      title="none"
+                      type="button"
+                      aria-haspopup="dialog"
+                      aria-expanded="false"
+                      aria-controls="hs-detalles-inventario"
+                      data-hs-overlay="#hs-detalles-inventario"
+                      class="py-2 px-3 inline-flex items-center gap-x-2 text-xs rounded-lg border border-gray-200 bg-white text-gray-800 shadow-sm hover:bg-gray-50 focus:outline-none focus:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-white dark:hover:bg-neutral-800 dark:focus:bg-neutral-800"
+                    >
+                      <img
+                        src="../../../../../../assets/svg/icon_ver.svg"
+                        alt=""
+                      />
+                    </button>
                   </div>
                 </td>
                 <td class="size-px whitespace-nowrap">
@@ -348,7 +348,7 @@
             <div>
               <p class="text-sm text-gray-600 dark:text-neutral-400">
                 <span class="font-semibold text-gray-800 dark:text-neutral-200"
-                  >{{collection.length}}</span
+                  >{{itemsPerPageProductos}}</span
                 >
                 Inventarios
               </p>
