Reporte para excel culminado

--- a/src/app/Ui/Modules/reportes/reports/reporte-inventario/reporte-inventario.component.html
+++ b/src/app/Ui/Modules/reportes/reports/reporte-inventario/reporte-inventario.component.html
@@ -26,10 +26,7 @@
                 >
               </p>
             </div>
-
-            <div>
-              <!-- <grupo-buttons-header-carga-datos /> -->
-            </div>
+            <!-- Botones opcionales -->
           </div>
           <!-- End Header -->
 
@@ -314,19 +311,8 @@
                           aria-labelledby="hs-table-dropdown-1"
                         >
                           <div class="py-2 first:pt-0 last:pb-0">
-                            <a
-                              class="flex items-center gap-x-3 py-2 px-3 rounded-lg text-sm text-gray-800 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 dark:text-neutral-400 dark:hover:bg-neutral-700 dark:hover:text-neutral-300 dark:focus:bg-neutral-700 dark:focus:text-neutral-300"
-                              href="#"
-                            >
-                              Excel
-                            </a>
-                            <descargar-reporte-pdf [rucEmpresa]="item.rucempresa" [idCarga]="item.idcarga"/>
-                            <a
-                              class="flex items-center gap-x-3 py-2 px-3 rounded-lg text-sm text-gray-800 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 dark:text-neutral-400 dark:hover:bg-neutral-700 dark:hover:text-neutral-300 dark:focus:bg-neutral-700 dark:focus:text-neutral-300"
-                              href="#"
-                            >
-                              inhabilitar
-                            </a>
+                            <descargar-reporte-excel [rucEmpresa]="item.rucempresa" [idCarga]="item.idcarga" />
+                            <descargar-reporte-pdf [rucEmpresa]="item.rucempresa" [idCarga]="item.idcarga" />
                           </div>
                           <div class="py-2 first:pt-0 last:pb-0">
                             <a
@@ -360,7 +346,7 @@
                 <span class="font-semibold text-gray-800 dark:text-neutral-200"
                   >{{cantidadDatosInventarioLista}}</span
                 >
-                Inventarios
+                Inventarios en total
               </p>
             </div>
 
