--- a/src/app/Ui/Modules/reportes/components/descargar-reporte-excel/descargar-reporte-excel.component.html
+++ b/src/app/Ui/Modules/reportes/components/descargar-reporte-excel/descargar-reporte-excel.component.html
@@ -1,1 +1,6 @@
-<p>descargar-reporte-excel works!</p>
+<a
+  class="flex items-center gap-x-3 py-2 px-3 rounded-lg text-sm text-gray-800 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 dark:text-neutral-400 dark:hover:bg-neutral-700 dark:hover:text-neutral-300 dark:focus:bg-neutral-700 dark:focus:text-neutral-300"
+  (click)="inventarioSeleccionado(rucEmpresa, idCarga)"
+  >
+  Excel
+</a>
