organiazción pagina DASHBOARD en componentes

--- a/src/app/Ui/Modules/configuration/Usuarios/components/registro/registro-usuario/registro-usuario.component.html
+++ b/src/app/Ui/Modules/configuration/Usuarios/components/registro/registro-usuario/registro-usuario.component.html
@@ -1,1 +1,223 @@
-<p>registro-usuario works!</p>
+<div
+  id="registro-usuarios"
+  class="hs-overlay [--overlay-backdrop:static] hidden size-full fixed top-0 start-0 z-[80] overflow-x-hidden overflow-y-auto pointer-events-none"
+  role="dialog"
+  tabindex="-1"
+  aria-labelledby="hs-static-backdrop-modal-label"
+  data-hs-overlay-keyboard="false"
+>
+  <div
+    class="hs-overlay-open:mt-7 hs-overlay-open:opacity-100 hs-overlay-open:duration-500 mt-0 opacity-0 ease-out transition-all sm:max-w-lg sm:w-full m-3 sm:mx-auto"
+  >
+    <div
+      class="flex flex-col bg-white border shadow-sm rounded-xl pointer-events-auto dark:bg-neutral-800 dark:border-neutral-700 dark:shadow-neutral-700/70"
+    >
+
+      <div class="bg-fondo-header relative overflow-hidden min-h-32 text-center rounded-t-xl">
+
+        <div class="absolute top-2 end-2 ">
+          <button type="button" class="flex justify-center items-center size-7 text-sm font-semibold rounded-full border border-transparent text-white/70 hover:bg-white/10 focus:outline-none focus:bg-white/10 disabled:opacity-50 disabled:pointer-events-none" aria-label="Close" data-hs-overlay="#registro-usuarios">
+            <span class="sr-only">Close</span>
+            <svg class="shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 6 6 18"/><path d="m6 6 12 12"/></svg>
+          </button>
+        </div>
+
+        <h2 class="mt-8 text-2xl  font-bold text-white dark:text-neutral-200">
+          Usu<span class="text-[#00D1AE]">arios</span>
+        </h2>
+
+        <p class="mt-4 text-sm text-gray-100 dark:text-neutral-400">
+          Ingresa los datos necesarios para el nuevo usuario
+        </p>
+
+      </div>
+
+      <div class="p-4 overflow-y-auto">
+        <form (ngSubmit)="guardarUsuario()" [formGroup]="formularioRegistro">
+          <div class="grid sm:grid-cols-12 gap-2 sm:gap-6">
+            <div class="sm:col-span-3">
+              <label
+                for="af-account-email"
+                class="inline-block text-sm text-gray-800 mt-2.5 dark:text-neutral-200"
+              >
+                Empresa
+              </label>
+            </div>
+
+            <div class="sm:col-span-9">
+              <input
+                [(ngModel)]="usuario.rucempresa"
+                formControlName="rucempresa"
+                id="af-account-email"
+                type="text"
+                class="border py-2 px-3 pe-11 block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-800 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
+                placeholder="Ingresar el nombre del usuario"
+              />
+            </div>
+            <!-- <div class="sm:col-span-9">
+              <select
+              formControlName="usuario"
+              [(ngModel)]="usuario.rucempresa"
+              title="none"
+                data-hs-select='{
+                "hasSearch": true,
+                "searchPlaceholder": "Buscar por Ruc...",
+                "searchClasses": "block w-full text-sm border-gray-200 rounded-lg focus:border-blue-500 focus:ring-blue-500 before:absolute before:inset-0 before:z-[1] dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 py-2 px-3",
+                "searchWrapperClasses": "bg-white p-2 -mx-1 sticky top-0 dark:bg-neutral-900",
+                "placeholder": "Seleccionar Empresa...",
+                "toggleTag": "<button type=\"button\" aria-expanded=\"false\"><span class=\"me-2\" data-icon></span><span class=\"text-gray-800 dark:text-neutral-200 \" data-title></span></button>",
+                "toggleClasses": "hs-select-disabled:pointer-events-none hs-select-disabled:opacity-50 relative py-3 ps-4 pe-9 flex gap-x-2 text-nowrap w-full cursor-pointer bg-white border border-gray-200 rounded-lg text-start text-sm focus:outline-none focus:ring-2 focus:ring-blue-500 dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-neutral-600",
+                "dropdownClasses": "border mt-2 max-h-72 pb-1 px-1 space-y-0.5 z-20 w-full bg-white border border-gray-200 rounded-lg overflow-hidden overflow-y-auto [&::-webkit-scrollbar]:w-2 [&::-webkit-scrollbar-thumb]:rounded-full [&::-webkit-scrollbar-track]:bg-gray-100 [&::-webkit-scrollbar-thumb]:bg-gray-300 dark:[&::-webkit-scrollbar-track]:bg-neutral-700 dark:[&::-webkit-scrollbar-thumb]:bg-neutral-500 dark:bg-neutral-900 dark:border-neutral-700",
+                "optionClasses": "py-2 px-4 w-full text-sm text-gray-800 cursor-pointer hover:bg-gray-100 rounded-lg focus:outline-none focus:bg-gray-100 dark:bg-neutral-900 dark:hover:bg-neutral-800 dark:text-neutral-200 dark:focus:bg-neutral-800",
+                "optionTemplate": "<div><div class=\"flex items-center\"><div class=\"me-2\" data-icon></div><div class=\"text-gray-800 dark:text-neutral-200 \" data-title></div></div></div>",
+                "extraMarkup": "<div class=\"absolute top-1/2 end-3 -translate-y-1/2\"><svg class=\"shrink-0 size-3.5 text-gray-500 dark:text-neutral-500 \" xmlns=\"http://www.w3.org/2000/svg\" width=\"24\" height=\"24\" viewBox=\"0 0 24 24\" fill=\"none\" stroke=\"currentColor\" stroke-width=\"2\" stroke-linecap=\"round\" stroke-linejoin=\"round\"><path d=\"m7 15 5 5 5-5\"/><path d=\"m7 9 5-5 5 5\"/></svg></div>"
+                }'
+                class="hidden mt-5 "
+              >
+                @for (item of DatosEmpresas; track $index) {
+                  <option [value]="item.rucempresa" >
+                  {{item.rucempresa}} - {{item.razonsocial}}
+                </option>
+                }
+
+              </select>
+            </div> -->
+
+            <!-- End Col -->
+
+            <div class="sm:col-span-3">
+              <label
+                for="af-account-email"
+                class="inline-block text-sm text-gray-800 mt-2.5 dark:text-neutral-200"
+              >
+                Usuario
+              </label>
+            </div>
+            <!-- End Col -->
+
+            <div class="sm:col-span-9">
+              <input
+                [(ngModel)]="usuario.idusuario"
+                formControlName="idUsuario"
+                id="af-account-email"
+                type="text"
+                class="border py-2 px-3 pe-11 block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-800 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
+                placeholder="Ingresar el nombre del usuario"
+              />
+            </div>
+
+            <div class="sm:col-span-3">
+              <label
+                for="af-account-email"
+                class="inline-block text-sm text-gray-800 mt-2.5 dark:text-neutral-200"
+              >
+                Nombre Usuario
+              </label>
+            </div>
+            <!-- End Col -->
+
+            <div class="sm:col-span-9">
+              <input
+                [(ngModel)]="usuario.nombreusuario"
+                formControlName="nombreUsuario"
+                id="af-account-email"
+                type="text"
+                class="border py-2 px-3 pe-11 block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-800 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
+                placeholder="Ingresar el nombre del usuario"
+              />
+            </div>
+            <!-- End Col -->
+
+            <div class="sm:col-span-3">
+              <div class="inline-block">
+                <label
+                  for="af-account-phone"
+                  class="inline-block text-sm text-gray-800 mt-2.5 dark:text-neutral-200"
+                >
+                  Apellido
+                </label>
+              </div>
+            </div>
+            <!-- End Col -->
+
+            <div class="sm:col-span-9">
+              <div class="sm:flex">
+                <input
+                  [(ngModel)]="usuario.apellido"
+                  formControlName="apellidoUsuario"
+                  id="af-account-phone"
+                  type="text"
+                  class="border py-2 px-3 pe-11 block w-full border-gray-200 shadow-sm -mt-px -ms-px first:rounded-t-lg last:rounded-b-lg sm:first:rounded-s-lg sm:mt-0 sm:first:ms-0 sm:first:rounded-se-none sm:last:rounded-es-none sm:last:rounded-e-lg text-sm relative focus:z-10 focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-800 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
+                  placeholder="Ingresa el apellido del usuariox"
+                />
+              </div>
+            </div>
+
+            <div class="sm:col-span-3">
+              <label
+                for="af-account-email"
+                class="inline-block text-sm text-gray-800 mt-2.5 dark:text-neutral-200"
+              >
+                cargo
+              </label>
+            </div>
+            <!-- End Col -->
+
+            <div class="sm:col-span-9">
+              <input
+                [(ngModel)]="usuario.cargo"
+                formControlName="cargoUsuario"
+                id="af-account-email"
+                type="text"
+                class="border py-2 px-3 pe-11 block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-800 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
+                placeholder="ejemplo av San Agustin #289"
+              />
+            </div>
+
+            <div class="sm:col-span-3">
+              <label
+                for="af-account-email"
+                class="inline-block text-sm text-gray-800 mt-2.5 dark:text-neutral-200"
+              >
+                contraseña
+              </label>
+            </div>
+            <!-- End Col -->
+
+            <div class="sm:col-span-9">
+              <input
+                [(ngModel)]="usuario.contrasenia"
+                formControlName="contraseniaUsuario"
+                id="af-account-email"
+                type="text"
+                class="border py-2 px-3 pe-11 block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-800 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
+                placeholder="ejemplo av San Agustin #289"
+              />
+            </div>
+
+
+          </div>
+
+
+          <!-- End Grid -->
+
+          <div class="mt-5 flex justify-end gap-x-2">
+            <button
+              type="button"
+              class="py-2 px-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-gray-200 bg-white text-gray-800 shadow-sm hover:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none focus:outline-none focus:bg-gray-50 dark:bg-transparent dark:border-neutral-700 dark:text-neutral-300 dark:hover:bg-neutral-800 dark:focus:bg-neutral-800"
+              data-hs-overlay="#registro-empresas"
+            >
+              Cancel
+            </button>
+            <button
+              type="submit"
+              class="py-2 px-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-transparent bg-blue-600 text-white hover:bg-blue-700 focus:outline-none focus:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none"
+            >
+              Guardar
+            </button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
