--- a/src/app/Ui/Modules/login/page/login-page/login-page.component.html
+++ b/src/app/Ui/Modules/login/page/login-page/login-page.component.html
@@ -114,7 +114,7 @@
                       <input
                         type="password"
                         id="password"
-                        formControlName="contrasena"
+                        formControlName="contrasenia"
                         class="py-3 px-4 block w-full border border-gray-200 rounded-lg text-sm focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
                         required
                         aria-describedby="password-error"
