organización carpetas CARGA_INVENTARIO

--- a/src/app/Ui/Modules/Asignaciones/inventarios/components/asignacion-inventario/asignacion-inventario.component.html
+++ b/src/app/Ui/Modules/Asignaciones/inventarios/components/asignacion-inventario/asignacion-inventario.component.html
@@ -418,7 +418,7 @@
 <!-- End Table Section -->
 
 <!-- Modal detalle inventario -->
-<detalle-inventario
+<detalle-carga-inventarios
   [citaSeleccionada]="datosInventario"
   [detalleProductos]="listaProductos"
   [cantidadInventarios]="cantidadListaProductos"
