--- a/src/app/Ui/Modules/Dashboard/Page/dashboard-inicio/dashboard-inicio.component.html
+++ b/src/app/Ui/Modules/Dashboard/Page/dashboard-inicio/dashboard-inicio.component.html
@@ -1,4 +1,4 @@
-<app-header-dashboard></app-header-dashboard>
-<section-opciones></section-opciones>
+<app-header-dashboard />
+<section-opciones />
 <section-manuales />
-<footer-general></footer-general>
+<footer-general />
