--- a/src/app/Ui/Modules/Carga_Inventario/Components/Buttons/grupo-buttons-header-carga-datos/grupo-buttons-header-carga-datos.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Components/Buttons/grupo-buttons-header-carga-datos/grupo-buttons-header-carga-datos.component.html
@@ -1,4 +1,4 @@
 <div class="inline-flex gap-x-2">
-  <button-descarga (funcionDescarga)="BtndescargarPlantilla()" />
-  <button-nuevo  [abrirModal]="'hs-sign-out-alert-small-window'"/>
+  <button-descargar-plantilla/>
+  <button-nuevo-inventario/>
 </div>
