--- a/src/app/Ui/Modules/Carga_Inventario/Components/table-carga/header-table-carga-inventario/header-table-carga-inventario.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Components/table-carga/header-table-carga-inventario/header-table-carga-inventario.component.html
@@ -18,6 +18,8 @@
             </div>
 
             <div>
-              <grupo-buttons-header-carga-datos />
+              <grupo-buttons-header-carga-datos
+              (ordenarDatos)="BtnOrdenar()"
+              [ordenar]="ordenar" />
             </div>
           </div>
