imagen fondo en el preview regulada

--- a/src/app/Ui/Modules/Carga_Inventario/Page/preview-carga-inventarios/preview-carga-inventarios.component.css
+++ b/src/app/Ui/Modules/Carga_Inventario/Page/preview-carga-inventarios/preview-carga-inventarios.component.css
@@ -68,7 +68,7 @@
 
 
 .bg-fondo-detalle {
-  background-image: url("../../../../../../../assets/images/bg_fondo.webp");
+  background-image: url("../../../../../../assets/images/bg_fondo.webp");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
