add roles and login por roles

--- a/src/app/Ui/Modules/Carga_Inventario/Components/body-carga-inventario/body-carga-inventario.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Components/body-carga-inventario/body-carga-inventario.component.html
@@ -6,12 +6,12 @@
           class="bg-stats rounded-sm max-w-[100rem] px-4 py-10 sm:px-4 lg:px-0 lg:py-4 mx-auto bg-fondo-stats"
         >
           <header-breadcrumb />
-          <grupo-stats-carga-datos
+          <!-- <grupo-stats-carga-datos
             [ValorInventariosCreados]="cantidadDatosInventarioLista"
             [ValorInventariosAsignados]="cantidadDatosInventarioLista"
             [ValorInventariosActivos]="cantidadDatosInventarioLista"
             [ValorInventariosPorEmpresa]="cantidadDatosInventarioLista"
-          />
+          /> -->
         </header>
         <main>
           <lista-inventarios-cargados />
