--- a/src/app/Ui/Modules/configuration/Tipo_usuario/components/header/header-table/header-table.component.html
+++ b/src/app/Ui/Modules/configuration/Tipo_usuario/components/header/header-table/header-table.component.html
@@ -1,10 +1,10 @@
 <div class="px-6 py-4 grid gap-3 md:flex md:justify-between md:items-center border-b border-gray-200 dark:border-neutral-700">
   <div>
     <h2 class="text-xl font-semibold text-gray-800 dark:text-neutral-200">
-      TIPO USUARIOS
+      ROLES
     </h2>
     <p class="text-sm text-gray-600 dark:text-neutral-400">
-      Listado de las empresas a cargo
+      Listado de roles
     </p>
   </div>
 
