--- a/src/app/Ui/Modules/Carga_Inventario/Components/list-datos/lista-inventarios-cargados/lista-inventarios-cargados.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Components/list-datos/lista-inventarios-cargados/lista-inventarios-cargados.component.html
@@ -139,7 +139,7 @@
   [cantidadInventarios]="cantidadListaProductos"
 />
 
-<modal-asignacion
+<registro-asignar-page
   [rucEmpresa]="datosInventario.rucempresa"
   [idCarga]="datosInventario.idcarga"
   [getUsuarios_All]="getUsuarios_All"
