--- a/src/app/Ui/Modules/Asignaciones/page/lista-asignar-page/lista-asignar-page.component.html
+++ b/src/app/Ui/Modules/Asignaciones/page/lista-asignar-page/lista-asignar-page.component.html
@@ -424,7 +424,8 @@
   [cantidadInventarios]="cantidadListaProductos"
 />
 
-<modal-asignacion
+
+<registro-asignar-page
   [getUsuarios_All]="getUsuarios_All"
   [rucEmpresa]="datosInventario.rucempresa"
   [idCarga]="datosInventario.idcarga"
