--- a/src/app/Ui/Modules/Asignaciones/page/registro-asignar-page/registro-asignar-page.component.html
+++ b/src/app/Ui/Modules/Asignaciones/page/registro-asignar-page/registro-asignar-page.component.html
@@ -15,7 +15,7 @@
             <div class="flex-1">
               <div class="text-center">
                 <h3 id="hs-ai-modal-label" class="text-lg font-semibold text-gray-800 dark:text-neutral-200">
-                  REGISTRO  INVENTARIO
+                  ASIGNAR INVENTARIO
                 </h3>
                 <p class="text-sm text-gray-500 dark:text-neutral-500">
                   Datos a registrar
