--- a/src/app/Ui/Modules/Carga_Inventario/Components/table-carga/header-table-carga-inventario/header-table-carga-inventario.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Components/table-carga/header-table-carga-inventario/header-table-carga-inventario.component.html
@@ -1,25 +1,21 @@
 <div
-            class="px-6 py-4 grid gap-3 md:flex md:justify-between md:items-center border-b border-gray-200 dark:border-neutral-700"
-          >
-            <div>
-              <h2
-                class="text-xl font-semibold text-gray-800 dark:text-neutral-200"
-              >
-                Excels Inventarios
-              </h2>
-              <p class="text-sm text-gray-600 dark:text-neutral-400">
-                Listado de Excel cargados para
-                <a
-                  class="inline-flex items-center gap-x-1.5 text-blue-600 decoration-2 hover:underline focus:outline-none focus:underline font-medium dark:text-blue-500"
-                  href="#"
-                  >inventariar</a
-                >
-              </p>
-            </div>
+  class="px-6 py-4 grid gap-3 md:flex md:justify-between md:items-center border-b border-gray-200 dark:border-neutral-700"
+>
+  <div>
+    <h2 class="text-xl font-semibold text-gray-800 dark:text-neutral-200">
+      Excels Inventarios
+    </h2>
+    <p class="text-sm text-gray-600 dark:text-neutral-400">
+      Listado de Excel cargados para
+      <a
+        class="inline-flex items-center gap-x-1.5 text-blue-600 decoration-2 hover:underline focus:outline-none focus:underline font-medium dark:text-blue-500"
+        href="#"
+        >inventariar</a
+      >
+    </p>
+  </div>
 
-            <div>
-              <grupo-buttons-header-carga-datos
-              (ordenarDatos)="BtnOrdenar()"
-              [ordenar]="ordenar" />
-            </div>
-          </div>
+  <div>
+    <grupo-buttons-header-carga-datos />
+  </div>
+</div>
