--- a/src/app/Ui/Modules/Carga_Inventario/Page/lista-carga-inventarios/lista-carga-inventarios.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Page/lista-carga-inventarios/lista-carga-inventarios.component.html
@@ -1,8 +1,21 @@
-<header-buscador-usuario-movil />
+<!-- <header-buscador-usuario-movil /> -->
 <header-responsive />
-<app-sidebar
-[getEmpresas_all]="getEmpresas_All"
-[getUsuarios_all]="getUsuarios_All"
-/>
-<body-carga-inventario />
+<app-sidebar />
+<div class="w-full lg:ps-64">
+  <div class="w-full lg:ps-0 bg-fondo-datos">
+    <div class="p-4 sm:p-6 space-y-4 sm:space-y-6">
+      <section>
+        <header
+          class="bg-stats rounded-sm max-w-[100rem] px-4 py-10 sm:px-4 lg:px-0 lg:py-4 mx-auto bg-fondo-stats"
+        >
+        <!-- HEADER -->
+        </header>
+        <main>
+          <lista-inventarios-cargados />
+        </main>
+      </section>
+    </div>
+  </div>
+</div>
+
 <registro-carga-inventarios />
