--- a/src/app/Ui/Modules/login/page/login-page/login-page.component.html
+++ b/src/app/Ui/Modules/login/page/login-page/login-page.component.html
@@ -2,141 +2,18 @@
   <div class="h-[100vh] pt-7 bg-fondo-login grid place-content-center">
     <div class="container flex justify-center items-center gap-20">
       <div
-        class=" hidden md:block md:end-0   flex-1 max-w-md mx-auto m-7 rounded-xl shadow-sm dark:bg-neutral-900 dark:border-neutral-700 lg:max-w-lg"
+        class="hidden md:block md:end-0 flex-1 max-w-md mx-auto m-7 rounded-xl shadow-sm dark:bg-neutral-900 dark:border-neutral-700 lg:max-w-lg"
       >
-        <img
-          src="../../../../../../assets/svg/icon-logo-DbInventory.svg"
-          alt=""
-        />
-
-        <h2 class="text-4xl p-2 text-gray-100 text-left">
-          Haz tus
-          <span class="text-decoration">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="190"
-              height="24"
-              viewBox="0 0 190 5"
-              fill="none"
-            >
-              <rect width="190" height="24" rx="1" fill="#00D1AE"></rect></svg><span class="rslt-text ">inventarios</span>
-          </span>
-          más dinámicos y flexibles
-        </h2>
-        <p class="text-white mt-4">
-          Adapta tu Estrategia Logística a los nuevos retos digitales​
-        </p>
-        <button  class="mt-5 border-2 px-5 py-1 text-gray-100 rounded-md hover:text-[#00D1AE] hover:border-[#00D1AE] ">DB PERU</button>
-      </div>
+      <apartado-izquierdo />
+    </div>
 
       <div
         class="md:flex-[0.6] lg:flex-[0.6] flex-1 max-w-md mx-auto m-7 bg-white border border-gray-200 rounded-xl shadow-sm dark:bg-neutral-900 dark:border-neutral-700 lg:max-w-lg"
       >
         <div class="mt-0">
-          <div class="p-4 sm:p-7">
-            <div class="text-center">
-              <h1 class="block text-2xl font-bold text-gray-800 dark:text-white">
-                Login
-              </h1>
-              <p class="mt-2 text-sm text-gray-600 dark:text-neutral-400">
-                Ingresa a tu sistema de control de inventario
-                <!-- <a
-                  class="text-blue-600 decoration-2 hover:underline focus:outline-none focus:underline font-medium dark:text-blue-500"
-                  href="../examples/html/signup.html"
-                >
-                  DB INVENTORY
-                </a> -->
-              </p>
-            </div>
-
-            <div class="mt-5">
-              <!-- <button type="button" class="w-full py-3 px-4 inline-flex justify-center items-center gap-x-2 text-sm font-medium rounded-lg border border-gray-200 bg-white text-gray-800 shadow-sm hover:bg-gray-50 focus:outline-none focus:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-white dark:hover:bg-neutral-800 dark:focus:bg-neutral-800">
-                <svg class="w-4 h-auto" width="46" height="47" viewBox="0 0 46 47" fill="none">
-                  <path d="M46 24.0287C46 22.09 45.8533 20.68 45.5013 19.2112H23.4694V27.9356H36.4069C36.1429 30.1094 34.7347 33.37 31.5957 35.5731L31.5663 35.8669L38.5191 41.2719L38.9885 41.3306C43.4477 37.2181 46 31.1669 46 24.0287Z" fill="#4285F4"/>
-                  <path d="M23.4694 47C29.8061 47 35.1161 44.9144 39.0179 41.3012L31.625 35.5437C29.6301 36.9244 26.9898 37.8937 23.4987 37.8937C17.2793 37.8937 12.0281 33.7812 10.1505 28.1412L9.88649 28.1706L2.61097 33.7812L2.52296 34.0456C6.36608 41.7125 14.287 47 23.4694 47Z" fill="#34A853"/>
-                  <path d="M10.1212 28.1413C9.62245 26.6725 9.32908 25.1156 9.32908 23.5C9.32908 21.8844 9.62245 20.3275 10.0918 18.8588V18.5356L2.75765 12.8369L2.52296 12.9544C0.909439 16.1269 0 19.7106 0 23.5C0 27.2894 0.909439 30.8731 2.49362 34.0456L10.1212 28.1413Z" fill="#FBBC05"/>
-                  <path d="M23.4694 9.07688C27.8699 9.07688 30.8622 10.9863 32.5344 12.5725L39.1645 6.11C35.0867 2.32063 29.8061 0 23.4694 0C14.287 0 6.36607 5.2875 2.49362 12.9544L10.0918 18.8588C11.9987 13.1894 17.25 9.07688 23.4694 9.07688Z" fill="#EB4335"/>
-                </svg>
-                Sign in with Google
-              </button>
-
-              <div class="py-3 flex items-center text-xs text-gray-400 uppercase before:flex-1 before:border-t before:border-gray-200 before:me-6 after:flex-1 after:border-t after:border-gray-200 after:ms-6 dark:text-neutral-500 dark:before:border-neutral-600 dark:after:border-neutral-600">Or</div> -->
-
-              <!-- Form -->
-              <form [formGroup]="loginForm">
-                <div class="grid gap-y-4">
-                  <!-- Form Group: RUC -->
-                  <div>
-                    <label
-                      for="rucempresa"
-                      class="block text-sm mb-2 dark:text-white"
-                      >RUC Empresa</label
-                    >
-                    <div class="relative">
-                      <input
-                        type="text"
-                        id="rucempresa"
-                        formControlName="rucempresa"
-                        class="py-3 px-4 block w-full border border-gray-200 rounded-lg text-sm focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
-                        required
-                        aria-describedby="rucempresa-error"
-                      />
-                    </div>
-                  </div>
-
-                  <!-- Form Group: Usuario -->
-                  <div>
-                    <label
-                      for="username"
-                      class="block text-sm mb-2 dark:text-white"
-                      >Usuario</label
-                    >
-                    <div class="relative">
-                      <input
-                        type="text"
-                        id="username"
-                        formControlName="idUsuario"
-                        class="py-3 px-4 block w-full border border-gray-200 rounded-lg text-sm focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
-                        required
-                        aria-describedby="username-error"
-                      />
-                    </div>
-                  </div>
-
-                  <!-- Form Group: Contraseña -->
-                  <div>
-                    <label
-                      for="password"
-                      class="block text-sm mb-2 dark:text-white"
-                      >Contraseña</label
-                    >
-                    <div class="relative">
-                      <input
-                        type="password"
-                        id="password"
-                        formControlName="contrasenia"
-                        class="py-3 px-4 block w-full border border-gray-200 rounded-lg text-sm focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
-                        required
-                        aria-describedby="password-error"
-                      />
-                    </div>
-                  </div>
-
-                  <button
-                    type="submit"
-                    (click)="onSubmit()"
-                    class="w-full py-3 px-4 inline-flex justify-center items-center gap-x-2 text-sm font-medium rounded-lg border border-transparent bg-blue-600 text-white hover:bg-blue-700 focus:outline-none focus:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none"
-                  >
-                    Ingresar
-                  </button>
-                </div>
-              </form>
-              <!-- End Form -->
-            </div>
-          </div>
+          <apartado-derecho />
         </div>
       </div>
     </div>
   </div>
-
 </div>
