--- a/src/app/Ui/Modules/Carga_Inventario/Page/lista-carga-inventarios/lista-carga-inventarios.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Page/lista-carga-inventarios/lista-carga-inventarios.component.html
@@ -1,6 +1,3 @@
-<!-- <header-buscador-usuario-movil /> -->
-<header-responsive />
-<app-sidebar />
 <div class="w-full lg:ps-64">
   <div class="w-full lg:ps-0 bg-fondo-datos">
     <div class="p-4 sm:p-6 space-y-4 sm:space-y-6">
@@ -8,11 +5,21 @@
         <header
           class="bg-stats rounded-sm max-w-[100rem] px-4 py-10 sm:px-4 lg:px-0 lg:py-4 mx-auto bg-fondo-stats"
         >
-        <!-- HEADER -->
+          <header-page />
         </header>
-        <main>
-          <lista-inventarios-cargados />
-        </main>
+        <div class="max-w-[100rem] py-10 lg:py-4 mx-auto">
+          <div class="flex flex-col">
+            <div class="-m-1.5 overflow-x-auto">
+              <div class="p-1.5 min-w-full inline-block align-middle">
+                <div
+                  class="bg-white border border-gray-200 rounded-xl shadow-sm overflow-hidden dark:bg-neutral-900 dark:border-neutral-700"
+                >
+                  <lista-inventarios-cargados />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
     </div>
   </div>
