organización menu principal

--- a/src/app/Ui/Shared/Components/organisms/header-buscador-usuario-movil/header-buscador-usuario-movil.component.html
+++ b/src/app/Ui/Shared/Components/organisms/header-buscador-usuario-movil/header-buscador-usuario-movil.component.html
@@ -177,13 +177,10 @@
           aria-orientation="vertical"
           aria-labelledby="hs-dropdown-account"
         >
-          <opciones-header-usuario />
+          <!-- opciones header usuario-->
         </div>
       </div>
     </div>
   </div>
 </nav>
 </header>
-
-
-
