--- a/src/app/Ui/Modules/Carga_Inventario/Components/header-page/header-page.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Components/header-page/header-page.component.html
@@ -1,16 +1,20 @@
-<div class="container-header">
-  <div class="container-header-title">
-    <h1>Carga Inventario</h1>
-    <p class="text-sm text-gray-50 dark:text-neutral-400">
-      Listado de Excel cargados para
+<div
+  class="container-header px-6 py-4 grid gap-3 md:flex md:justify-between md:items-center border-b border-gray-200 dark:border-neutral-700"
+>
+  <div>
+    <h2 class="text-xl font-semibold text-gray-100 dark:text-neutral-200">
+      CARGA INVENTARIO
+    </h2>
+    <p class="text-sm text-gray-100 dark:text-neutral-400">
+      Carga tus inventarios de
       <a
-        class="inline-flex items-center gap-x-1.5 text-gray-50 decoration-2 hover:underline focus:outline-none focus:underline font-medium dark:text-blue-500"
-        >inventariar</a
+        class="inline-flex items-center gap-x-1.5 text-gray-100 decoration-2 hover:underline focus:outline-none focus:underline font-medium dark:text-blue-500"
+        >manera sensilla</a
       >
     </p>
   </div>
   <div class="inline-flex gap-x-2">
-    <button-descargar-plantilla/>
-    <button-nuevo-inventario/>
+    <button-descargar-plantilla />
+    <button-nuevo-inventario />
   </div>
 </div>
