--- a/src/app/Ui/Modules/configuration/Tipo_usuario/page/tipo-usuario-page/tipo-usuario-page.component.html
+++ b/src/app/Ui/Modules/configuration/Tipo_usuario/page/tipo-usuario-page/tipo-usuario-page.component.html
@@ -1,1 +1,26 @@
-<table-lista-tipo-usuario [DatosTipoUsuario]="DatosRoles"/>
+<div class="w-full lg:ps-64">
+  <div class="w-full lg:ps-0 bg-fondo-datos">
+    <div class="p-4 sm:p-6 space-y-4 sm:space-y-6">
+      <section>
+        <div class="max-w-[100rem] py-10 lg:py-4 mx-auto">
+          <div class="flex flex-col">
+            <div class="-m-1.5 overflow-x-auto">
+              <div class="p-1.5 min-w-full inline-block align-middle">
+                <div
+                  class="bg-white border border-gray-200 rounded-xl shadow-sm overflow-hidden dark:bg-neutral-900 dark:border-neutral-700"
+                >
+                <table-lista-tipo-usuario [DatosTipoUsuario]="DatosRoles"/>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
+  </div>
+</div>
+
+
+
+
+
