--- a/src/app/Ui/Shared/Components/organisms/menu-opciones/menu-opciones.component.html
+++ b/src/app/Ui/Shared/Components/organisms/menu-opciones/menu-opciones.component.html
@@ -1,4 +1,4 @@
-@for (item of mainMenu.accessLink; track $index) {
+@for (item of mainMenu.accessLink; track $index) { @if (item.subMenu != true) {
 <li>
   <a
     [routerLink]="item.route"
@@ -9,4 +9,86 @@
     {{ item.name }}
   </a>
 </li>
-}
+}@else {
+<li class="hs-accordion" id="account-accordion">
+  <button
+    type="button"
+    class="hs-accordion-toggle w-full text-start flex items-center gap-x-3.5 py-2 px-2.5 text-sm text-gray-100 rounded-lg hover:bg-gray-800 focus:outline-none focus:bg-gray-800 dark:bg-neutral-800 dark:hover:bg-neutral-700 dark:text-neutral-200"
+    aria-expanded="true"
+    aria-controls="account-accordion-child"
+  >
+    <svg
+      class="shrink-0 mt-0.5 size-4"
+      xmlns="http://www.w3.org/2000/svg"
+      width="24"
+      height="24"
+      viewBox="0 0 24 24"
+      fill="none"
+      stroke="currentColor"
+      stroke-width="2"
+      stroke-linecap="round"
+      stroke-linejoin="round"
+    >
+      <circle cx="18" cy="15" r="3" />
+      <circle cx="9" cy="7" r="4" />
+      <path d="M10 15H6a4 4 0 0 0-4 4v2" />
+      <path d="m21.7 16.4-.9-.3" />
+      <path d="m15.2 13.9-.9-.3" />
+      <path d="m16.6 18.7.3-.9" />
+      <path d="m19.1 12.2.3-.9" />
+      <path d="m19.6 18.7-.4-1" />
+      <path d="m16.8 12.3-.4-1" />
+      <path d="m14.3 16.6 1-.4" />
+      <path d="m20.7 13.8 1-.4" />
+    </svg>
+    {{ item.name }}
+    <svg
+      class="hs-accordion-active:block ms-auto hidden size-4"
+      xmlns="http://www.w3.org/2000/svg"
+      width="24"
+      height="24"
+      viewBox="0 0 24 24"
+      fill="none"
+      stroke="currentColor"
+      stroke-width="2"
+      stroke-linecap="round"
+      stroke-linejoin="round"
+    >
+      <path d="m18 15-6-6-6 6" />
+    </svg>
+    <svg
+      class="hs-accordion-active:hidden ms-auto block size-4"
+      xmlns="http://www.w3.org/2000/svg"
+      width="24"
+      height="24"
+      viewBox="0 0 24 24"
+      fill="none"
+      stroke="currentColor"
+      stroke-width="2"
+      stroke-linecap="round"
+      stroke-linejoin="round"
+    >
+      <path d="m6 9 6 6 6-6" />
+    </svg>
+  </button>
+  <div
+    id="account-accordion-child"
+    class="hs-accordion-content w-full overflow-hidden transition-[height] duration-300 hidden"
+    role="region"
+    aria-labelledby="account-accordion"
+  >
+    <ul class="ps-8 pt-1 space-y-1">
+      @for (items of item.listaSubMenu; track $index) {
+      <li>
+        <a
+          [routerLink]="items.route"
+          class="flex items-center gap-x-3.5 py-2 px-2.5 text-sm text-gray-100 rounded-lg hover:bg-gray-800 focus:outline-none focus:bg-gray-800 dark:bg-neutral-800 dark:text-neutral-200"
+        >
+          {{ items.name }}
+        </a>
+      </li>
+      }
+    </ul>
+  </div>
+</li>
+} }
