--- a/src/styles.css
+++ b/src/styles.css
@@ -25,6 +25,7 @@ html, body {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  background-color: var(--color-principal-4);
 }
 body {
   box-sizing: border-box;
