--- a/src/app/Ui/Modules/Asignaciones/components/tabla-inventarios-asignados/tabla-inventarios-asignados.component.html
+++ b/src/app/Ui/Modules/Asignaciones/components/tabla-inventarios-asignados/tabla-inventarios-asignados.component.html
@@ -350,3 +350,19 @@
 </div>
 
 <footer-general />
+
+
+<!-- Modal detalle inventario -->
+ <detalle-carga-inventarios
+  [citaSeleccionada]="datosInventario"
+  [detalleProductos]="listaProductos"
+  [cantidadInventarios]="cantidadListaProductos"
+/>
+
+
+<registro-asignar-page
+  [rucEmpresa]="datosInventario.rucempresa"
+  [idCarga]="datosInventario.idcarga"
+  [getUsuarios_All]="getUsuarios_All"
+/>
+
